Refactor loading and menu pages
- Deleted loading.tsx page
- Added menu/index.tsx page
- Updated next.config.mjs with pageExtensions
- Deleted menu/page.tsx page
- Renamed src/pages/globals.css to src/styles/globals.css
- Updated package.json with embla-carousel-react dependency
- Renamed src/pages/Header.tsx to src/components/Header.tsx
- Renamed src/pages/page.tsx to src/pages/index.tsx
- Updated src/components/DomItem.tsx with link href changes
- Renamed src/pages/cart/page.tsx to src/pages/cart/index.tsx
- Added src/pages/_app.tsx
- Updated src/pages/layout.tsx
- Deleted src/pages/item/[itemId]/page.tsx
- Updated pnpm-lock.yaml with embla-carousel-react dependency

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -753,6 +753,7 @@ main {
 .items-block .item-card .details .item-name {
 	color: var(--prim-color);
 	margin: 10px 0;
+	font-size: 21px;
 }
 
 .items-block .item-card .details .buttons {
