--- a/src/pages/endpoints/user/styles.module.css
+++ b/src/pages/endpoints/user/styles.module.css
@@ -2,12 +2,12 @@
 	display: grid;
 	grid-template-columns: minmax(150px, 250px) 1fr;
 	margin-block-start: 130px;
-	background-color: red;
+	overflow: hidden;
 }
 
 .dashboardMain .sideBar {
 	background-color: black;
-	min-block-size: 82vh;
+	block-size: 82vh;
 	color: var(--prim-color);
 	padding: 20px 10px;
 	font-size: 25px;
@@ -39,18 +39,15 @@
 	background-color: var(--font-color);
 	min-block-size: 82vh;
 	padding: 20px;
-}
-
-.mainContent {
 	margin-left: 0px;
 	padding: 20px;
 	width: calc(100% - 40px);
-	max-height: 100vh;
+	max-height: 82vh;
+	min-height: 82vh;
 	overflow-y: auto;
 }
 
 .welcomeMessage {
-	background-color: #fff;
 	padding: 20px;
 	border-radius: 8px;
 	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -64,6 +61,7 @@
 	display: flex;
 	flex-wrap: wrap;
 	gap: 20px;
+	min-width: 100%;
 }
 
 .card {
