--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap");
 
 * {
 	margin: 0;
 	padding: 0;
 	scroll-behavior: smooth;
-	font-family: 'Merriweather', serif;
+	font-family: "Merriweather", serif;
 }
 
 a {
@@ -497,7 +497,7 @@ main {
 	max-block-size: 87vh;
 	min-block-size: 87vh;
 	min-inline-size: 100%;
-	background-image: url('/images/menu-back.png');
+	background-image: url("/images/menu-back.png");
 }
 
 .embla {
@@ -587,7 +587,7 @@ main {
 	margin: 0;
 	padding: 0;
 	aspect-ratio: 1/1;
-	background-image: url('/images/menu-back.png');
+	background-image: url("/images/menu-back.png");
 	overflow: visible;
 }
 
@@ -621,7 +621,7 @@ main {
 	inline-size: 100%;
 	font-size: 40px;
 	gap: 5px;
-	font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+	font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
 
 #menu-slider .slider-content .right ul li {
@@ -777,8 +777,7 @@ main {
 	color: var(--prim-color);
 	border-radius: 50%;
 	padding: 0px 5px;
-	inset-block-start: -5px;
-	inset-inline-end: -5px;
+	transform: translate(30px, -40px);
 }
 
 .items-block .item-card .details .buttons button {
