--- a/src/pages/endpoints/admin/add-items/add-items.module.css
+++ b/src/pages/endpoints/admin/add-items/add-items.module.css
@@ -1,6 +1,5 @@
 .addItems {
-	padding: 20px;
-	margin-top: 150px;
+	padding: 0;
 	scroll-margin: 20px;
 }
 
@@ -8,25 +7,28 @@
 	display: grid;
 	grid-template-columns: 1fr 1fr;
 	gap: 20px;
-	padding: 20px;
+	padding: 20px 0;
 	max-height: 82vh;
 	overflow: hidden;
 	max-width: 1000px;
 	margin: 0 auto;
+	overflow-clip-margin: 20px;
 }
 
 .itemList {
 	display: grid;
 	grid-template-columns: 1fr;
-	grid-template-rows: repeat(auto-fill, 60px);
+	align-content: start;
 	background-color: var(--tet-color);
 	padding: 20px;
 	box-shadow: inset 0 0 5px 0 grey;
 	border-radius: 10px;
-	gap: 10px;
+	gap: 20px;
 	max-height: 70vh;
 	overflow-y: auto;
 	scroll-padding: 20px;
+	overflow-clip-margin: 20px;
+	overflow-clip-box: padding-box;
 }
 
 .addItems button {
@@ -58,15 +60,25 @@
 .selectedItemsList {
 	display: grid;
 	grid-template-columns: 1fr;
-	grid-template-rows: repeat(auto-fill, 60px);
 	background-color: var(--tet-color);
 	gap: 10px;
 	height: 100%;
 	overflow-y: auto;
+	align-content: start;
 }
 
 .response {
-	display: none;
+	margin: 20px auto;
+	border: 2px solid var(--prim-color);
+	border-inline: none;
+	padding: 20px;
+}
+
+.response ul {
+	display: grid;
+	grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+	gap: 10px;
+	margin: 20px auto;
 }
 
 .item {
@@ -79,6 +91,7 @@
 	padding: 0px 10px;
 	border-radius: 10px;
 	min-height: 50px;
+	height: fit-content;
 }
 
 .item img {
@@ -100,4 +113,30 @@
 
 .item input:focus {
 	outline: none;
+}
+
+.terminal {
+	background-color: rgb(34, 34, 34);
+	color: rgb(202, 202, 202);
+	font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu,
+		Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+	padding: 20px;
+	border-radius: 10px;
+	width: calc(100% - 40px);
+	min-height: 100px;
+	max-height: 300px !important;
+	box-shadow: inset 0 0 5px 0 grey;
+	margin-top: 20px;
+	font-size: 14px;
+	display: grid;
+	gap: 10px;
+}
+
+.logs {
+	display: grid;
+	grid-template-columns: 1fr;
+	gap: 5px;
+	overflow-y: auto;
+	max-height: 200px;
+	font-size: 12px;
 }
