--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -27,7 +27,7 @@ ul {
 }
 
 :root {
-	--prim-color: rgba(255, 143, 1, 1);
+	--prim-color: #ff8f01;
 	--sec-color: rgb(255, 245, 231);
 	--tet-color: #d3d3d3;
 	--forth-color: rgb(44, 44, 44);
