--- a/src/styles/pages.css
+++ b/src/styles/pages.css
@@ -305,7 +305,7 @@
 
 .checkout-sec {
 	display: grid;
-	grid-template-columns: repeat(auto-fill, minmax(300px, auto));
+	grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
 	justify-content: center;
 	margin: 150px auto 20px auto;
 	box-shadow: 2px 2px 4px 0 black;
@@ -314,6 +314,11 @@
 	max-inline-size: 90%;
 	background-color: var(--tet-color);
 	gap: 40px;
+}
+
+.checkout-sec > * {
+	min-inline-size: 250px;
+	max-inline-size: 500px;
 }
 
 .checkout-sec h2 {
@@ -332,7 +337,7 @@
 }
 
 .checkout-sec .personal-info-cont form {
-	inline-size: 100%;
+	width: 100%;
 	display: flex;
 	flex-direction: column;
 	gap: 20px;
@@ -353,11 +358,16 @@
 	font-size: 18px;
 	background-color: black;
 	color: var(--font-color);
+	width: calc(100% - 10px);
 }
 
 .checkout-sec .personal-info-cont .form-group input:focus {
 	outline: none;
 	box-shadow: 2px 2px 4px 0 var(--prim-color);
+}
+
+.checkout-sec .personal-info-cont .form-group label {
+	text-wrap: nowrap;
 }
 
 .checkout-sec .order-summary-cont {
@@ -371,6 +381,7 @@
 	gap: 20px;
 	color: var(--font-color);
 	box-shadow: 2px 2px 4px 0 black;
+	width: calc(100% - 40px);
 }
 
 .checkout-sec .order-summary-cont .order-summary {
@@ -380,6 +391,9 @@
 	align-items: center;
 	gap: 5px;
 	color: var(--font-color);
+	max-height: 300px;
+	overflow-y: auto;
+	width: 100%;
 }
 
 .checkout-sec .order-summary-cont .order-item {
@@ -391,8 +405,8 @@
 	border: 2px solid var(--forth-color);
 	padding: 4px 10px;
 	border-radius: 5px;
-	min-inline-size: 95%;
-	max-inline-size: 95%;
+	width: calc(100% - 20px);
+
 	font-weight: 400;
 	font-size: 16px;
 }
