--- a/src/pages/endpoints/admin/reports/reports.module.css
+++ b/src/pages/endpoints/admin/reports/reports.module.css
@@ -25,7 +25,7 @@
 }
 
 .controls button {
-	padding: 10px 20px;
+	padding: 5px 10px;
 	border: none;
 	border-radius: 5px;
 	background-color: var(--forth-color);
@@ -35,4 +35,15 @@
 
 .controls button:hover {
 	background-color: var(--prim-color);
+}
+
+.fieldset {
+	display: flex;
+	gap: 10px;
+	border-radius: 10px;
+	padding: 5px;
+}
+
+.activeBtn {
+	border: 2px solid var(--prim-color);
 }
