--- a/src/pages/endpoints/admin/items/items.module.css
+++ b/src/pages/endpoints/admin/items/items.module.css
@@ -3,6 +3,13 @@
 	background-color: #f9f9f9;
 	border-radius: 8px;
 	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+	min-width: calc(100% - 40px);
+}
+
+.items p {
+	margin-bottom: 20px;
+	font-size: 16px;
+	color: #333;
 }
 
 .items h3 {
@@ -47,18 +54,18 @@
 	padding: 8px 12px;
 	margin: 0 4px;
 	border: none;
-	background-color: #007bff;
+	background-color: var(--prim-color);
 	color: white;
 	border-radius: 4px;
 	cursor: pointer;
 }
 
 .pagination button:hover {
-	background-color: #0056b3;
+	background-color: var(--forth-color);
 }
 
 .activePage {
-	background-color: #0056b3;
+	background-color: var(--forth-color);
 }
 
 .chart {
@@ -80,4 +87,63 @@
 	margin: 30px auto;
 	border-top: 2px solid #ddd;
 	padding-top: 30px;
+}
+
+.form {
+	display: grid;
+	grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+	gap: 15px;
+	padding: 20px;
+	background-color: #fff;
+	border-radius: 8px;
+	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+	width: calc(100% - 40px);
+}
+
+.form label {
+	display: flex;
+	flex-direction: column;
+	font-size: 16px;
+	color: #333;
+}
+
+.form input[type="text"],
+.form input[type="number"],
+.form textarea {
+	padding: 10px;
+	border: 1px solid #ddd;
+	border-radius: 4px;
+	font-size: 14px;
+}
+
+.form button {
+	padding: 10px 15px;
+	margin-top: 10px;
+	border: none;
+	background-color: var(--prim-color);
+	color: white;
+	border-radius: 4px;
+	cursor: pointer;
+}
+
+.form button[type="button"] {
+	background-color: #ccc;
+}
+
+.form button:hover {
+	background-color: var(--forth-color);
+}
+
+.form button[type="button"]:hover {
+	background-color: #bbb;
+}
+
+.textArea {
+	grid-column: 1 / -1;
+}
+
+.textArea textarea {
+	resize: vertical;
+	min-height: 150px;
+	height: fit-content;
 }
