--- a/src/pages/endpoints/admin/users/users.module.css
+++ b/src/pages/endpoints/admin/users/users.module.css
@@ -47,18 +47,18 @@
 	padding: 8px 12px;
 	margin: 0 4px;
 	border: none;
-	background-color: #007bff;
+	background-color: var(--prim-color);
 	color: white;
 	border-radius: 4px;
 	cursor: pointer;
 }
 
 .pagination button:hover {
-	background-color: #0056b3;
+	background-color: var(--forth-color);
 }
 
 .activePage {
-	background-color: #0056b3;
+	background-color: var(--forth-color);
 }
 
 .chart {
