--- a/src/pages/endpoints/admin/admin.module.css
+++ b/src/pages/endpoints/admin/admin.module.css
@@ -248,3 +248,24 @@
 	flex-direction: column;
 	align-items: flex-start;
 }
+
+.chart {
+	max-width: 600px;
+	max-height: 400px;
+	width: calc(100% - 40px);
+	height: calc(100% - 40px);
+	border-radius: 10px;
+	box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+	padding: 20px;
+}
+
+.charts {
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	gap: 50px;
+	justify-items: center;
+	max-width: 1300px;
+	margin: 30px auto;
+	border-top: 2px solid #ddd;
+	padding-top: 30px;
+}
