--- a/src/pages/endpoints/admin/orders/orders.module.css
+++ b/src/pages/endpoints/admin/orders/orders.module.css
@@ -220,3 +220,12 @@
 		cursor: pointer;
 	}
 }
+
+.refreshButton {
+	background-color: var(--prim-color);
+	color: var(--font-color);
+	border: none;
+	border-radius: 5px;
+	padding: 5px 10px;
+	cursor: pointer;
+}
