--- a/src/pages/endpoints/admin/items/items.module.css
+++ b/src/pages/endpoints/admin/items/items.module.css
@@ -31,6 +31,18 @@
 	border-bottom: 1px solid #ddd;
 }
 
+.itemsTable td button {
+	display: inline;
+	padding: 5px;
+	border: 1px solid var(--tet-color);
+	border-radius: 5px;
+	font-size: 16px;
+	background-color: white;
+	color: var(--forth-color);
+	appearance: none;
+	cursor: pointer;
+}
+
 .itemsTable th {
 	background-color: #f1f1f1;
 	font-weight: bold;
