--- a/src/pages/menu/menu.module.css
+++ b/src/pages/menu/menu.module.css
@@ -30,17 +30,16 @@
 
 .menu {
 	display: grid;
-	grid-template-columns: repeat(5, 1fr);
-	grid-template-rows: repeat(auto-fill, minmax(200px, 1fr));
+	grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+	grid-template-rows: repeat(auto-fit, minmax(200px, 300px));
 	gap: 15px;
 	width: 100vw;
-	height: 100vh;
+	min-height: 100vh;
 	padding: 20px 20px;
 	box-sizing: border-box;
 	overflow: hidden;
 	justify-items: center;
-	align-items: center;
-	background: var(--prim-color);
+	justify-content: center;
 }
 
 .menu-item {
@@ -53,6 +52,7 @@
 	height: calc(100% - 20px);
 	border-radius: 10px;
 	padding: 10px;
+	box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 .menu-item .image {
