--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -338,6 +338,24 @@ ul {
 	background-color: black;
 }
 
+.searchPopup{
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	z-index: 10;
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	height: 80vh;
+	max-width: 80vw;
+	overflow-y: auto;
+	padding: 10px;
+	border-radius: 20px;
+	background: white;
+	scroll-padding: 10px;
+}
+
 @media (max-width: 900px) {
 	.main-nav .nav-items .nav-item .nav-link p {
 		display: none;
